k8s/3-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-orchestrator
  namespace: aumovio-platform-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-orchestrator
  template:
    metadata:
      labels:
        app: backend-orchestrator
    spec:
      serviceAccountName: backend-orchestrator-sa
      containers:
        - name: backend
          image: gcr.io/gcp1042-bv42/backend-orchestrator:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: backend-orchestrator
  namespace: aumovio-platform-deploy
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "backendconfig-testing"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: backend-orchestrator
