k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aumovio-platform-ingress
  namespace: aumovio-platform-deploy
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "aumovio-platform-ip"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "backendconfig-testing"
spec:
  rules:
    - http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /platform
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /platforms
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /progress
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /hub/deploy
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /run
            pathType: Prefix
            backend:
              service:
                name: backend-orchestrator
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
